# mgnt-docs

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
ai/guides/: 1-IA-aplicada-para-desenvolvedores-em-empresas.md  4-integração-e-automacao-com-IA-em-negocios.mdai
ai/tools/: openwebui.md
claude-code/claude-code/: index.html
credentials/api-mobbus/: index.html
credentials/api-prevision/: index.html
credentials/api-qive/: index.html
credentials/api-sienge/: index.html
credentials/api-softexpert/: index.html
credentials/app-mngt/: index.html
credentials/chatgpt/: index.html
credentials/discord/: index.html
credentials/email-devs/: index.html
credentials/email-gabriel/: index.html
credentials/email-mais-armazem/: index.html
credentials/evolution-api/: index.html
credentials/github/: index.html
credentials/n8n/: index.html
credentials/netdata/: index.html
credentials/server-api-mngt/: index.html
credentials/supabase/: index.html
credentials/wordpress/: index.html
docs/: index.md
docs/claude-code/: claude-code.md
docs/credentials/: api-mobbus.md  api-prevision.md  api-qive.md  api-sienge.md  api-softexpert.md  app-mngt.md  chatgpt.md  discord.md  email-devs.md  email-gabriel.md  email-mais-armazem.md  evolution-api.md  github.md  n8n.md  netdata.md  server-api-mngt.md  supabase.md  wordpress.md
docs/documentation/: documentacao.md
docs/infra/: start.md
docs/tasks/: tarefas.md
docs/tools/: evolution-api.md  n8n.md
infra/start/: index.html
scripts/: set_github_secrets.py
(+86 files in other folders)
