[project]
name = "docs-mngt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "mkdocs>=1.6.1",
    "mkdocs-encryptcontent-plugin>=3.1.0",
    "mkdocs-link-embeds-plugin>=0.2.0",
    "mkdocs-material>=9.7.1",
    "pymdown-extensions>=10.21",
]
